--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@hookform/resolvers": "^2.9.8",
+    "@mantine/core": "^5.3.3",
+    "@mantine/form": "^5.4.0",
+    "@mantine/hooks": "^5.3.3",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@tabler/core": "^1.0.0-beta11",
+    "@tabler/icons": "^1.96.0",
+    "@tanstack/react-query": "^4.6.0",
+    "@tanstack/react-query-devtools": "^4.6.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,11 +20,20 @@
     "@types/node": "^16.11.58",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
+    "helpers": "^0.0.6",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.36.0",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.8.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
